<resources>
    <string name="app_name">Market</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="empty_string" />

    <string name="menu_payment">Оплата</string>
    <string name="menu_my_address">Мои адреса</string>
    <string name="menu_my_orders">Мои заказы</string>
    <string name="menu_favourites">Избранное</string>
    <string name="menu_news">Новости</string>
    <string name="menu_coupons">Купоны</string>
    <string name="menu_about_us">О нас</string>
    <string name="menu_invite_friends">Пригласить друзей</string>
    <string name="menu_settings">Настройки</string>
    <string name="new_text">Новинка</string>
    <string name="address">Адрес</string>
    <string name="current_geolocation">Текущее местоположение</string>


    <string name="contact_us">Связаться \nс нами</string>
    <string name="delivery">Доставка</string>
    <string name="product_search">Поиск товаров</string>
    <string name="promotions">Акции</string>
    <string name="see_all">Смотреть все</string>
    <string name="catalog">Каталог</string>
</resources>